--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="cost_of_service">Cost of Service</string>
     <string name="round_up_tip">Round up tip?</string>
     <string name="calculate">Calculate</string>
-    <string name="tip_amount">Tip amount</string>
+    <string name="tip_amount">Tip Amount: %s</string>
     <string name="how_was_the_service">How was the service?</string>
 </resources>
